--- a/public/app/views/index.html
+++ b/public/app/views/index.html
@@ -39,9 +39,11 @@
     <script src="app/app.js"></script>
     <script src="app/services/authService.js"></script>
     <script src="app/services/initialDataService.js"></script>
+    <script src="app/controllers/signinController.js"></script>
     <script src="app/controllers/signup/signupParentController.js"></script>
     <script src="app/controllers/signup/signupStudentController.js"></script>
     <script src="app/controllers/signup/signupPlanController.js"></script>
+    <script src="app/controllers/signup/signupParentVerifyController.js"></script>
     <script src="app/controllers/signup/signupAddSuffixController.js"></script>
     <!-- End App Script files -->
 
