--- a/public/app/views/partials/partial-index.html
+++ b/public/app/views/partials/partial-index.html
@@ -27,7 +27,7 @@
                     <li><a href="#new-project">Aboout us </a></li>
                     <li><a href="#about">Contact Us</a></li>
                     <li><a class="btn btn-success" ui-sref="signup/parent">Get Started</a></li>
-                    <li><a class="" href="">Login</a></li>
+                    <li><a class="" ui-sref="login">Login</a></li>
                 </ul>
             </div>
             <!-- Navigation Ends -->
