--- a/public/app/views/partials/signup/partial-signup-plan.html
+++ b/public/app/views/partials/signup/partial-signup-plan.html
@@ -54,6 +54,14 @@
                             <li><i class="fa fa-heart"></i><p>Verify 2</p></li> -->
                         </ul>
                     </div>
+                    <div class="form-group text-center">
+                        <div class="alert alert-danger" ng-if="spnc.signupError" role="alert">
+                            {{ spc.signupErrorMessage }}
+                        </div>
+                        <div class="alert alert-success" ng-if="spnc.signupSuccess" role="alert">
+                            {{ spc.signupSuccessMessage }}.!
+                        </div>
+                    </div>
                     <hr>
                     <form ng-submit="spnc.signupPlan()">
                         <div class="form-group">
