--- a/public/app/views/index.html
+++ b/public/app/views/index.html
@@ -45,6 +45,9 @@
     <script src="app/controllers/signup/signupPlanController.js"></script>
     <script src="app/controllers/signup/signupParentVerifyController.js"></script>
     <script src="app/controllers/signup/signupAddSuffixController.js"></script>
+    <script src="app/controllers/signup/signupAddStudentController.js"></script>
+    <script src="app/controllers/signup/signupStudentVerifyController.js"></script>
+    <script src="app/controllers/homeController.js"></script>
     <!-- End App Script files -->
 
     <!-- Bootstrap init functions -->
