--- a/public/app/views/partials/signup/partial-signup-student-verify.html
+++ b/public/app/views/partials/signup/partial-signup-student-verify.html
@@ -58,45 +58,38 @@
                             <li><i class="fa fa-heart"></i>
                                 <p>Verify </p>
                             </li>
-                            <li class="active"><i class="fa fa-gear"></i>
-                                <p>Add Suffix</p>
+                            <li><i class="fa fa-gear"></i>
+                                <p>Add New</p>
                             </li>
-                            <!-- <li><i class="fa fa-heart"></i>
+                            <li class="active"><i class="fa fa-heart"></i>
                                 <p>Verify 2</p>
-                            </li> -->
+                            </li>
                         </ul>
                     </div>
                     <hr>
-                    <form ng-submit="spas.setSuffix()">
-                        <p>Thank you for subscribing. We will now send a final set-up email to your student.</p>
-                        <p>If you would like to include a brief message, please type it here:</p>
+                    <form action="">
+
                         <div class="form-group">
-                            <textarea ng-model="spas.setInputedSuffix" class="form-control" rows="8" id="comment"></textarea>
+                            <p style="margin-bottom: 50px;">Awesome, Thanks for signing up. Please enter the validation code we just texted you to start this service.</p>
+                            <div class="row">
+                                <div class="form-group col-md-5">
+                                    <label for="code">Your Validation Code</label>
+                                    <input type="text" class="form-control" id="code" placeholder="">
+                                </div>
+                                <div class="form-group col-md-7">
+                                    <a href="" type="button" class="btn btn-success next-btn" style="margin-top: 30px"> Verify </a>
+                                </div>
+                            </div>
                         </div>
                         <div class="form-group mt-50">
                             <div class="row">
                                 <div class="form-group col-md-12">
-                                    <button type="submit" data-toggle="modal" data-target=".bd-example-modal-lg" class="btn btn-success next-btn">Next Step <i class="fa fa-angle-right"></i> </button>
+                                    <h3>Already have an account, <a href="">Sign In Here</a></h3>
                                 </div>
                             </div>
                         </div>
+
                     </form>
-                    <!-- Begin Bootstrap3 modal -->
-                    <div class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
-                        <div class="modal-dialog modal-lg">
-                            <div class="modal-content">
-                                <p style="text-align: center;">Thanks!  Do you want to add another student?  It could be one of yours or a grandchild, niece or nephew…go crazy.</p>
-                                <div class="form-group mt-50">
-                                    <div class="row">
-                                        <div class="form-group col-md-6 col-md-offset-3">
-                                            <a ui-sref="" type="button" class="btn btn-info next-btn" style="width: 100%; padding: 15px; font-size: 22px;">Add Additional Student</a>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <!-- End Bootstrap3 modal -->
                 </div>
             </div>
         </div>
